network-policies/token-vault-policy.yaml
# Accepts Ingress from Payment Auth API and Reconciliation
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: token-vault-restrict
  namespace: cde-production
spec:
  podSelector:
    matchLabels:
      app: token-vault-service
  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: payment-authorization-api
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: batch-jobs
          podSelector:
            matchLabels:
              app: reconciliation-job
